Fix table alignment

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -142,7 +142,6 @@ th {
 th,
 td {
   padding: .8rem 1rem;
-  text-align: left;
   border-right: 2px solid var(--softer);
 }
 
